--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="icon" type="image/png" href="img/zeus99.png">
     <meta name="description"
         content="Zeus GPS S.A.S - Empresa especializada en rastreo satelital, GPS para vehículos, alarmas, polarizados, vidrios eléctricos y más.">
-
+    <link rel="icon" type="image/png" href="zeus99.png">
 
 
 
