--- a/index.html
+++ b/index.html
@@ -80,21 +80,23 @@
                 <h3>TU MEJOR ALIADO EN RASTREO SATELITAL</h3>
 
                 <p>
-                    Es una empresa especializada en rastreo satelital y soluciones de seguridad vehicular,
-                    enfocada en brindarte control total, protección y eficiencia para vehículos particulares,
+                    Somos una empresa especializada en rastreo satelital y soluciones avanzadas de seguridad vehicular,
+                    diseñada para brindarte control total, protección y eficiencia en vehículos particulares,
                     comerciales y flotas empresariales.
                 </p>
 
                 <p>
-                    Ofrecemos tecnología confiable que permite monitorear en tiempo real la ubicación de tus vehículos,
-                    generar alertas inteligentes, prevenir robos y optimizar rutas. Nuestro sistema está diseñado para
-                    responder rápido, con precisión y máxima estabilidad.
+                    Ofrecemos tecnología confiable y de alto rendimiento que permite el monitoreo en tiempo real, la
+                    generación de alertas inteligentes, la prevención efectiva de robos y la optimización de rutas.
+                    Nuestro sistema opera con precisión, rapidez y máxima estabilidad, incluso en escenarios de alta
+                    exigencia.
                 </p>
 
                 <p>
-                    En Zeus GPS trabajamos para que siempre tengas el control en tus manos. Te ofrecemos instalación
-                    profesional, servicio seguro y soporte permanente, brindando herramientas avanzadas para proteger
-                    lo que más importa.
+                    En Zeus GPS trabajamos para que el control esté siempre en tus manos. Contamos con instalación
+                    profesional, servicio seguro y soporte permanente, poniendo a tu disposición herramientas avanzadas
+                    que protegen tus vehículos y optimizan tu operación.
+                    Porque la seguridad no se improvisa: se gestiona con tecnología y confianza.
                 </p>
             </div>
         </div>
